--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1,3 +1,11 @@
+/* @group Temporary workarounds for stupid HTML in current Plone */
+
+#sub-nav li.navTreeItem div { /* Why is there a stray div in the navtree list item? */
+	display: inline !important;
+}
+
+/* @end */
+
 /* @group Neutralize! */
 
 a {
@@ -72,6 +80,7 @@ background-color: white;
 	font-size: 13px;
 	line-height: 30px;
 	border-top: 1px solid #dcdcdc;
+	margin-right: 210px;
 }
 
 #sub-nav li a {
@@ -92,7 +101,9 @@ ul.navigation li a:hover {
 ul.navigation li a.selected,
 ul.navigation li a.active {
 	color: #75ad0a;
-	border-bottom: 1px solid white;
+	padding: 6px 9px 5px 9px;
+	border-bottom: 2px solid white;
+	border-left: 1px solid white;
 }
 
 
@@ -136,13 +147,46 @@ ul.navigation li a.active {
 
 /* @group Splash pages */
 
-#splash {
-	width: 671px;
-	font-family: "Helvetica Neue", Arial;
+div.splash {
+	float: left;
+	/*width: 671px;*/
+	font-family: "Helvetica Neue", Arial, sans-serif;
 	background-color: #205c90;
+	width: 676px;
+	margin-top: 8px;
+	margin-bottom: 24px;
+	color: White;
+	/*margin-bottom: 13px;*/
+	z-index: 1;
+
+	/*min-height: 212px;*/
+	min-height: 196px;
 }
 
-#splash a {
+div.splash h1 {
+	padding: 1em 0.5em 0 260px !important;
+	font-weight: bold;
+	font-size: 26px;
+	line-height: 32px;
+	letter-spacing: -1px;
+
+}
+
+div.splash h2 {
+	padding: 0 0 0 387px;
+	font-weight: bold;
+	font-size: 22px;
+	line-height: 28px;
+	letter-spacing: -1px;
+}
+
+div.splash p {
+	padding: 20px 0 0 260px;
+	font-size: 12px;
+	font-weight: bold;
+}
+
+div.splash a {
 	color: White;
 	float: right;
 	line-height: 16px;
@@ -152,105 +196,59 @@ ul.navigation li a.active {
 	display: block;
 }
 
-#splash h1 {
-	font-size: 24px;
-	padding: 20px 18px;
+div.pullout {
+	float: left;
+	background-color: #eee;
+	/*width: 236px;*/
+	width: 265px;
+	margin-left: -5px;
+	/*min-height: 162px;*/
+	min-height: 196px;
+	padding: 25px 15px 0 25px;
+	margin-top: 8px;
+	margin-bottom: 24px;
 }
 
-#splash h2 {
-	font-size: 24px;
-	padding: 0 0 0 387px;
-}
-
-#splash p {
-	padding: 20px 0 0 387px;
-	font-size: 12px;
-	font-weight: bold;
-}
-
-div.sub-splash {
-	width: 671px;
-	min-height: 212px;
-	color: White;
-	margin-bottom: 13px;
-}
-
-div.sub-splash h1 {
-	padding: 1em 0.5em 0 270px !important;
-}
-
-div.sub-splash p {
-	padding: 1em 1em 0 270px !important;
-}
-
-
-#splash-pullout {
-	float: right;
-	background: #dcdcdc top right url(images/splash-pullout.png) no-repeat;
-	width: 236px;
-	min-height: 162px;
-	padding: 25px 15px;
-}
-
-#splash-pullout h2 {
+div.pullout h2 {
 	font-size: 24px;
 	margin-bottom: 0.5em;
 }
 
-#splash-pullout p,
-#splash-pullout ul,
-#splash-pullout ol {
+div.pullout p,
+div.pullout ul,
+div.pullout ol {
 	font-size: 12px;
 	margin-bottom: 1em;
 }
 
-#splash-pullout li {
+div.pullout li {
 	display: block;
 }
 
-#splash-pullout li a:before {
+div.pullout li a:before {
 	content: "→ ";
 }
 
-/* @group Page-specific splash styles */
-
-div.splash-frontpage {
-	min-height: 284px;
-	color: White;
-	background: #205c90 url(images/splash-bg.jpg) no-repeat;
-	margin-bottom: 13px;
-}
-
-div.splash-enterprise {
-	background: #205c90 url(images/splash-enterprise.jpg) no-repeat;
-}
-
-/* @end */
-
-
-
-/* @end */
-
-/* @group Sidebar */
-
-#sector-sidebar {
+div.sidebar {
 	width: 245px;
 	float: right;
 	margin-top: 10px;
+	margin-left: 16px;
 }
 
 
-#sector-sidebar ul li a {
-	line-height: 35px;
+div.sidebar ul li a {
+	line-height: 36px;
 	font-size: 18px;
 	display: block;
 	border-top: 1px solid #eee;
 	font-weight: bold;
 	background: left 9px url(images/arrow-blue.png) no-repeat;
 	padding-left: 16px;
+	letter-spacing: -1px;
 }
 
-#sector-sidebar ol li {
+div.sidebar ol li {
 	line-height: 18px;
 	font-size: 11px;
 	display: block;
@@ -260,7 +258,7 @@ div.splash-enterprise {
 	clear: both;
 }
 
-#sector-sidebar ol li a {
+div.sidebar ol li a {
 	font-weight: bold;
 	display: block;
 }
@@ -273,6 +271,32 @@ img.book-cover {
 	margin: 5px 15px 10px 0;
 }
 
+/* @group Page-specific splash styles */
+
+#splash-frontpage {
+	min-height: 284px !important;
+	background: #205c90 url(images/splash-bg.jpg) no-repeat;
+	margin-top: 0;
+	margin-bottom: 13px;
+	width: 671px;
+}
+
+#splash-frontpage h1 {
+	padding: 20px 18px !important;
+}
+
+#splash-frontpage p {
+	padding: 20px 0 0 387px;
+}
+
+div.splash-enterprise {
+	background: #205c90 url(images/splash-enterprise.jpg) no-repeat;
+}
+
+/* @end */
+
+
+
 /* @end */
 
 /* @group Listings */
@@ -281,8 +305,9 @@ img.book-cover {
 
 div.pane {
 	background-color: #eee;
-	width: 651px;
+	width: 656px;
 	padding: 10px;
+	clear: left;
 }
 
 div.pane h1 {
@@ -314,6 +339,8 @@ div.pagesearch input {
 #topics {
 	background-color: white;
 	padding: 10px;
+	/*margin-top: 8px; compensate for corners*/ 
+	margin-bottom: 8px
 }
 
 #topics h3 {
@@ -327,7 +354,7 @@ div.pagesearch input {
 }
 
 #topics h3.selected a {
-	padding-left: 1.25em;
+	/*padding-left: 1.25em;*/
 	color: black;
 	cursor: default;
 }
@@ -337,8 +364,8 @@ div.pagesearch input {
 }
 
 #topics h3.selected a:before {
-	/*content: "▼ ";*/
-	content: "";
+	content: "▼ ";
+	/*content: "";*/
 }
 
 
@@ -364,7 +391,7 @@ ul.topic li {
 
 #current {
 	background: 150px 130px url(images/cogs.png) no-repeat;	
-	clear: right;
+	clear: left;
 	}
 
 div.box {
@@ -428,7 +455,7 @@ div.box .date {
 	border: 1px solid #eee;
 	float: right;
 	background-color: #f6f6f6;
-	height: 27.5em;
+	height: 27.4em;
 }
 #accordion h2 {
 	font-family: "Helvetica Neue", Arial;
@@ -439,17 +466,16 @@ div.box .date {
 	color: White;
 	cursor: pointer;
 	font-weight: bold;
-
 }
 
 #accordion h2.selected {
 	cursor: inherit;
-	padding-left: 1.6em;
+	/*padding-left: 1.6em;*/
 }
 
 #accordion h2.selected:before {
-	/*content: "▼ ";*/
-	content: " ";
+	content: "▼ ";
+	/*content: " ";*/
 }
 
 #accordion h2:before {
@@ -487,19 +513,19 @@ div.box .date {
 
 #plone-boxed {
 	display: block;
-	margin: 2em auto 1em auto;
+	margin: 0 auto;
 }
 
 #download-link {
 	display: block;
 	width: 163px;
-	height: 47px;
+	height: 43px;
 	background: url(images/download-box.png) no-repeat;
 	color: white;
 	font-size: 12px;
 	font-weight: bold;
 	padding: 8px 14px;
-	margin: 1em 30px 0 30px;
+	margin: 0 30px;
 }
 
 /* @end */
@@ -542,34 +568,26 @@ background-color: #329fd7;
 
 #content h1,
 #archetypes-fieldname-title input {
-	font-family: "Helvetica Neue", Arial;
-	margin-bottom: 10px;
+	font-family: "Helvetica Neue", Arial, sans-serif;
 	color: black;
 	clear: left;
-	font-weight: normal;
-	font-size: 18px;
-	line-height: 20px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
+	font-weight: bold;
+	font-size: 26px;
+	line-height: 32px;
+	letter-spacing: -1px;
 }
 
-#content h1 {
-	font-family: "Helvetica Neue", Arial;
-	font-weight: normal;
-	font-style: normal;
-}
 
 #content h1.documentFirstHeading {
 	margin-top: 1em;
 }
 
 #content h2 {
-	color: #666;
+	color: #444;
 	padding: 0;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin: 0.5em 0 0.4em;
-	font: normal 18px/20px Arial,Helvetica,Geneva,sans-serif;
+	letter-spacing: -1px;
+
+	font: bold 22px/28px "Helvetica Neue", Arial, sans-serif;
 }
 
 #content h2 a,h2 a,#content h2 a:hover  {
