fixed min-height for .splash and .pullout in IE6
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22818

--- a/new.plone.org/static/ie.css
+++ b/new.plone.org/static/ie.css
@@ -1,3 +1,21 @@
 #footer {
     height: 1%;
 }
+
+ul.navigation li a {
+    letter-spacing: -1px
+}
+
+#sub-nav li a {
+    letter-spacing: 0
+}
+
+ul.navigation li a.selected, 
+ul.navigation li a.active {
+    position: relative
+}
+
+* html .splash,
+* html .pullout {
+    height: 196px;
+}
