minor layout fix for IE6
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22842

--- a/new.plone.org/static/ie.css
+++ b/new.plone.org/static/ie.css
@@ -19,3 +19,8 @@ ul.navigation li a.active {
 * html .pullout {
     height: 196px;
 }
+
+* html .ui-accordion,
+* html .ui-accordion-header {
+    height: 1%
+}
