Removing JS corners, using border-radius for everything, download page updates.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23206

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -158,18 +158,19 @@ ul.navigation li a.active {
 
 div.splash {
 	float: left;
-	/*width: 671px;*/
 	font-family: "Helvetica Neue", Arial, sans-serif;
 	background-color: #205c90;
 	width: 676px;
 	margin-top: 8px;
 	margin-bottom: 24px;
 	color: White;
-	/*margin-bottom: 13px;*/
-	z-index: 1;
+	clear: right;
+	min-height: 196px;
 
-	/*min-height: 212px;*/
-    min-height: 196px;
+	border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
+	-moz-border-radius: 0.5em;
+
 }
 
 div.splash h1 {
@@ -208,14 +209,15 @@ div.splash a {
 div.pullout {
 	float: left;
 	background-color: #eee;
-	/*width: 236px;*/
-	width: 265px;
-	margin-left: -5px;
-	/*min-height: 162px;*/
-	min-height: 196px;
+	width: 220px;
+	min-height: 172px;
 	padding: 25px 15px 0 25px;
 	margin-top: 8px;
 	margin-bottom: 24px;
+
+	border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
+	-moz-border-radius: 0.5em;
 }
 
 div.pullout h2 {
@@ -348,43 +350,42 @@ div.pagesearch input {
 	color: #666;
 }
 
-#topics {
+#categories {
 	background-color: white;
 	padding: 10px;
 	/*margin-top: 8px; compensate for corners*/ 
-	margin-bottom: 8px;
 	border-radius: 0.5em;
 	-webkit-border-radius: 0.5em;
 	-moz-border-radius: 0.5em;
 }
 
-#topics h3 {
+#categories h3 {
 	border-top: 1px solid #ccc;
 	font-size: 14px;
 }
 
-#topics h3 a {
+#categories h3 a {
 	display: block;
 	padding: 0.5em 0 0.5em 0;
 }
 
-#topics h3.selected a {
+#categories h3.selected a {
 	/*padding-left: 1.25em;*/
 	color: black;
 	cursor: default;
 }
 
-#topics h3 a:before {
+#categories h3 a:before {
 	content: "▶ ";
 }
 
-#topics h3.selected a:before {
+#categories h3.selected a:before {
 	content: "▼ ";
 	/*content: "";*/
 }
 
 
-#topics p {
+#categories p {
 	font-size: 11px;	
 }
 
@@ -464,6 +465,7 @@ div.downloadssearch input {
 #sort-by {
 	margin-left:10px;
 	font-size:.7em;
+	line-height: 2em;
 }
 
 .sort {
@@ -535,13 +537,6 @@ ul.downloads li {
 	display:block;
 	border-bottom:1px solid #ccc;
 	padding:5px 0px;
-}
-
-#categories {
-	background-color: white;
-	padding: 10px;
-	margin-top: 12px; /* compensate for corners */
-	margin-bottom: 8px;
 }
 
 .advice {
@@ -738,7 +733,7 @@ div.box .date {
 	clear: both;
 	background-color: #329fd7;
 	width: 937px;
-	margin: 0 auto;
+	margin: 1em auto 0 auto;
 }
 
 #footer-logo {
